@@ -15,10 +15,11 @@ respawn
 
 env DEFAULTFILE=/etc/default/sssd
 
-script
+pre-start script
+	test -f /etc/sssd/sssd.conf || {stop; exit 0;}
 	if [ -f "$DEFAULTFILE" ]; then
 	. "$DEFAULTFILE"
 	fi
-
-	exec sssd $DAEMON_OPTS
 end script
+
+exec sssd $DAEMON_OPTS
